doc: documenta endpont geração JWT
